# gradual

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  SConstruct  dual.h  gradient.h  main.cc  optimiser.h  test_dual.cc  test_gradient.cc  test_optimiser.cc  test_vector.cc  vector.h
.github/workflows/: ci.yml
cmake/: GradualConfig.cmake.in
examples/: CMakeLists.txt  basic_minimisation.cc  compile_time_gradients.cc  custom_model.cc  minimise_from_dimension.cc  minimise_with_ctad.cc  quadratic_fit.cc  variadic_model.cc
include/gradual/: dual.h  gradient.h
tests/: CMakeLists.txt  test_dual.cc  test_gradient.cc  test_optimiser.cc  test_vector.cc
